# src/routes/index.ts
@@ -1,12 +1,15 @@
-import express from "express"
-import PingController from "../controllers/ping"
+import express from "express";
+import PingController from "../controllers/ping.controller";
+import UserRouter from "./user.router";
 
-const router = express.Router()
+const router = express.Router();
 
-router.get("/ping", async (req, res) => {
-    const controller = new PingController()
-    const response = await controller.getMessage()
-    return res.send(response)
+router.get("/ping", async (_req, res) => {
+    const controller = new PingController();
+    const response = await controller.getMessage();
+    return res.send(response);
 });
 
-export default router
+router.use("/users", UserRouter);
+
+export default router;
